Fixing pom file and removing old cruft